content page numbering fixed

--- a/HTML/HTML_Tutorial.tex
+++ b/HTML/HTML_Tutorial.tex
@@ -206,11 +206,13 @@
 	\end{flushright}
 \end{titlepage}
 
-\thispagestyle{empty}
+\cleardoublepage
+\pagenumbering{roman}
+
 \newpage
 \tableofcontents
-\thispagestyle{empty}
 \cleardoublepage
+
 \setcounter{page}{1}
 \def\Arg{\mathop{\operator@font Arg}\nolimits}
 \pagenumbering{arabic}
