--- a/Javascript/Javascript_Tutorial.tex
+++ b/Javascript/Javascript_Tutorial.tex
@@ -127,12 +127,13 @@
 	\begin{flushright}	
 	\end{flushright}
 \end{titlepage}
+\cleardoublepage
+\pagenumbering{roman}
 
-\thispagestyle{empty}
 \newpage
 \tableofcontents
-\thispagestyle{empty}
 \cleardoublepage
+
 \setcounter{page}{1}
 \def\Arg{\mathop{\operator@font Arg}\nolimits}
 %\newpage
